# opspilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: ci.yml
demo/: __init__.py
demo/faults/: inventory-error.sh  inventory-latency.sh  reset-inventory.sh
demo/runbooks/: inventory-service.md  order-service.md
demo/scenarios/: inventory-error.sh  inventory-latency.sh
demo/services/: __init__.py  common.py  gateway.py  inventory.py  order.py
deploy/alertmanager/: alertmanager.yml
deploy/prometheus/: prometheus.yml  rules.yml
docs/: architecture.md  demo-environment.md  demo-video-script.md  deployment-demo.md  evaluation-baseline.md  evaluation-dataset.md  feishu-integration.md  incident-workspace.md  interview-guide.md  investigation-engine.md  project-plan.md  remediation-workflow.md  resilience-testing.md  runbook-rag.md
evals/incidents/: build_dataset.py  cases-v1.json  cases.json
evals/reports/: incident-baseline.json  (+5 more)
migrations/: env.py
scripts/: resilience_test.py  smoke.py
tests/: __init__.py  conftest.py  fake_tools.py  test_alertmanager.py  test_citations.py  test_demo_services.py  test_demo_workflow.py  test_evaluation_api.py  test_feishu.py  test_feishu_client.py  test_health.py  test_incident_evaluation.py  test_investigation_api.py  test_investigation_graph.py  test_migrations.py  test_notification_dispatcher.py  test_notifier.py  test_observation_tools.py  test_remediation.py  test_runbook_evaluation.py  test_runbooks.py  test_workspace.py
(+70 files in other folders)
