[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opspilot"
version = "0.1.0"
description = "Evidence-driven AI SRE incident agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.30,<1",
  "cryptography>=44,<46",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langgraph>=0.3,<2",
  "markdown-it-py>=3,<5",
  "opentelemetry-api>=1.30,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.30,<2",
  "opentelemetry-instrumentation-fastapi>=0.51b0,<1",
  "opentelemetry-sdk>=1.30,<2",
  "prometheus-client>=0.21,<1",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
opspilot-eval = "opspilot.evaluation.cli:main"
opspilot-demo = "opspilot.demo.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opspilot", "demo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
